# lojban-NeSy

./: .gitignore  Cargo.toml  README.md  flake.nix  limitations.md  todo.md
docs/: Architecting the Logical Bridge_ A Neuro-Symbolic Reasoning Engine for Lojban in Rust (1).md  Neuro-Symbolic Lojban Engine in Rust (1).md  claude-input.md  compass_artifact_wf-1d6603dd-1ef2-4118-b555-1b3ed4291abd_text_markdown(1) (1).md  compass_artifact_wf-96eeef25-89b9-4e53-bccd-a3e7054c8fb3_text_markdown(1) (1).md  compass_artifact_wf-d1434cc7-7203-4f07-ad34-39df91bb4c3b_text_markdown (1).md  compass_artifact_wf-e0007d49-b8d8-4299-9388-e14464de2041_text_markdown(1) (1).md  deep-research-report-initial.md  deep-research-report.md  gemini-input.md
orchestrator/: Cargo.toml
orchestrator/src/: bindings.rs  lib.rs
parser/: Cargo.toml
parser/src/: ast.rs  bindings.rs  lexer.rs  lib.rs
reasoning/: Cargo.toml
reasoning/src/: bindings.rs  lib.rs
runner/: Cargo.toml
runner/src/: main.rs
semantics/: Cargo.toml  build.rs
semantics/src/: bindings.rs  dictionary.rs  ir.rs  lib.rs  semantic.rs
src/: ast.rs  dictionary.rs  main.rs  reasoning.rs  semantic.rs
wit/: world.wit
